# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-builder"
edition = "2021"

[dependencies]
anyhow.workspace = true
caliptra-auth-man-gen.workspace = true
caliptra-auth-man-types.workspace = true
caliptra-builder.workspace = true
caliptra-image-crypto.workspace = true
caliptra-image-fake-keys.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-types.workspace = true
cargo_metadata.workspace = true
cfg-if.workspace = true
chrono.workspace = true
elf.workspace = true
caliptra-mcu-flash-image.workspace = true
hex.workspace = true
caliptra-mcu-config.workspace = true
caliptra-mcu-config-emulator.workspace = true
caliptra-mcu-config-fpga.workspace = true
caliptra-mcu-firmware-bundler.workspace = true
caliptra-mcu-pldm-fw-pkg.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
semver.workspace = true
subst.workspace = true
caliptra-mcu-tbf-header.workspace = true
tempfile.workspace = true
uuid.workspace = true
walkdir.workspace = true
zerocopy.workspace = true
zip.workspace = true

[features]
parallel-build = ["dep:rayon"]
