# Licensed under the Apache-2.0 license

[workspace]
members = [
    "osal",
    "command-types", 
    "commands",
    "session",
    "transport",
    "cbinding",
    "tests",
    "xtask",
    "apps/mailbox/config",
    "apps/mailbox/client",
    "apps/mailbox/server",
    "apps/mctp-vdm/config",
    "apps/mctp-vdm/client"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[workspace.dependencies]
# Internal workspace dependencies
caliptra-mcu-core-util-host-osal = { path = "osal" }
caliptra-mcu-core-util-host-command-types = { path = "command-types" }
caliptra-util-host-commands = { path = "commands" }
caliptra-util-host-session = { path = "session" }
caliptra-mcu-core-util-host-transport = { path = "transport" }
caliptra-util-host-cbinding = { path = "cbinding" }
caliptra-mcu-core-util-host-mailbox-test-config = { path = "apps/mailbox/config" }
caliptra-mailbox-client = { path = "apps/mailbox/client" }
caliptra-mcu-core-mailbox-server = { path = "apps/mailbox/server" }
caliptra-mcu-core-util-host-mctp-vdm-test-config = { path = "apps/mctp-vdm/config" }
caliptra-mcu-core-mctp-vdm-client = { path = "apps/mctp-vdm/client" }

# External dependencies
anyhow = "1.0.97"
cargo_metadata = "0.18.1"
cc = "1.0"
cbindgen = "0.24"
clap = { version = "4.5.23", features = [
    "cargo",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
hmac = "0.12"
caliptra-mcu-mctp-vdm-common = { path = "../common/mctp-vdm" }
caliptra-mcu-testing-common = { path = "../common/testing" }
serde = { version = "1.0.209", features = ["alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.127", features = ["alloc"] }
sha2 = "0.10"
toml = "0.8.19"
zerocopy = { version = "0.8.17", features = ["derive"] }

[package]
name = "caliptra-util-host"
version.workspace = true
edition.workspace = true
description = "Caliptra Utility Host Library - A flexible framework for communicating with Caliptra devices"

[dependencies]
# Test dependencies to allow running tests from workspace root
caliptra-util-host-session.workspace = true
caliptra-mcu-core-util-host-transport.workspace = true
caliptra-util-host-commands.workspace = true
caliptra-mcu-core-util-host-command-types.workspace = true
zerocopy.workspace = true

[dev-dependencies]
# Same dependencies for test builds  
caliptra-util-host-session.workspace = true
caliptra-mcu-core-util-host-transport.workspace = true
caliptra-util-host-commands.workspace = true
caliptra-mcu-core-util-host-command-types.workspace = true
zerocopy.workspace = true

[features]
default = []