# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-coverage"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bit-vec = { workspace = true, features = ["serde"] }
elf.workspace = true
hex.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
