# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-firmware-bundler"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
elf.workspace = true
caliptra-mcu-image-header.workspace = true
serde.workspace = true
subst.workspace = true
caliptra-mcu-tbf-header.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true
zerocopy.workspace = true

[dev-dependencies]
tempfile.workspace = true
