# Licensed under the Apache-2.0 license

[workspace]
members = [
    "ocptoken-lib",
    "ocptoken",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[workspace.dependencies]
ocptoken = { path = "ocptoken-lib", package = "ocptoken-lib" }
coset = '0.4.1'
hex = "0.4"
thiserror = "2.0"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["derive"] }
corim-rs = { git = "https://github.com/parvathib/corim-rs.git", branch = "pbhogaraju/add_coev" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ciborium = "0.2"