# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-rom-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitfield.workspace = true
bitflags.workspace = true
caliptra-api.workspace = true
caliptra-api-types.workspace = true
caliptra-drivers.workspace = true
constant_time_eq.workspace = true
caliptra-mcu-flash-image.workspace = true
caliptra-mcu-config.workspace = true
caliptra-mcu-error.workspace = true
caliptra-mcu-otp-digest.workspace = true
caliptra-mcu-otp-lifecycle.workspace = true
caliptra-mcu-registers-generated.workspace = true
caliptra-mcu-romtime.workspace = true
smlang.workspace = true
tock-registers.workspace = true
zeroize.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-csr.workspace = true
rv32i.workspace = true

[features]
default = []   # default is 2.0
hw-2-1 = []
core_test = ["caliptra-mcu-romtime/core_test"]
fw-manifest-dot = []
