# Licensed under the Apache-2.0 license

[package]
name = "mcu-rom-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitfield.workspace = true
bitflags.workspace = true
caliptra-api.workspace = true
caliptra-api-types.workspace = true
caliptra-drivers.workspace = true
constant_time_eq.workspace = true
flash-image.workspace = true
mcu-config.workspace = true
mcu-error.workspace = true
ocp.workspace = true
otp-digest.workspace = true
mcu-otp-lifecycle.workspace = true
registers-generated.workspace = true
romtime.workspace = true
smlang.workspace = true
tock-registers.workspace = true
zeroize.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-csr.workspace = true
rv32i.workspace = true

[features]
default = ["hw-2-1"]              # default is 2.1
hw-2-1 = []
core_test = ["romtime/core_test"]
fw-manifest-dot = []
ocp-lock = ["romtime/ocp-lock"]
# Test-only: at the end of cold boot, rewrite the reset-reason register to
# force the next boot entry to `FirmwareHitlessUpdate` instead of
# `FirmwareBootReset`. Used by the DOT manifest hitless-update integration
# test to exercise `FwHitlessUpdate::run` without a real PLDM update flow.
test-force-hitless-update = []
stable-owner-key = []
