# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-romtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitflags.workspace = true
caliptra-api.workspace = true
caliptra-registers.workspace = true
caliptra-ureg.workspace = true
caliptra-mcu-error.workspace = true
caliptra-mcu-mbox-common.workspace = true
caliptra-mcu-otp-digest.workspace = true
caliptra-mcu-otp-lifecycle.workspace = true
caliptra-mcu-registers-generated.workspace = true
tock-registers.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-csr.workspace = true
rv32i.workspace = true

[features]
default = []
core_test = []
# Strip the `print!` / `println!` macros to no-ops that still type-check
# `format_args!` so all call sites compile cleanly.  Used to drop a few KB of
# `.rodata` (format strings) and `.text` (`core::fmt` machinery) in production
# builds.  Disabled by default; enabled by `mcu-runtime-emulator`/
# `mcu-runtime-fpga` via their `no-debug-print` feature.
no-print = []
