# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[features]
parallel-build = ["caliptra-mcu-builder/parallel-build"]
fpga_realtime = [
	"caliptra-mcu-hw-model/fpga_realtime",
	"dep:caliptra-hw-model",
	"dep:caliptra-mcu-hw-model",
	"dep:caliptra-mcu-rom-common",
]

[dependencies]
base64.workspace = true
caliptra-api-types.workspace = true
caliptra-auth-man-types.workspace = true
caliptra-builder.workspace = true
anyhow.workspace = true
cargo_metadata.workspace = true
cc.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-types.workspace = true
caliptra-hw-model = { workspace = true, optional = true }
clap.workspace = true
clap-num.workspace = true
ecdsa.workspace = true
elf.workspace = true
hex.workspace = true
caliptra-mcu-builder.workspace = true
caliptra-mcu-config-emulator.workspace = true
caliptra-mcu-config-fpga.workspace = true
caliptra-mcu-firmware-bundler.workspace = true
caliptra-mcu-fusegen.workspace = true
caliptra-mcu-rom-common = { workspace = true, optional = true }
caliptra-mcu-hw-model = { workspace = true, optional = true }
caliptra-mcu-fuses-generator.workspace = true
p384.workspace = true
caliptra-mcu-pldm-fw-pkg.workspace = true
proc-macro2.workspace = true
quote.workspace = true
caliptra-mcu-registers-generator.workspace = true
caliptra-mcu-registers-systemrdl.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-hjson.workspace = true
sha2.workspace = true
sudo.workspace = true
tempfile.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true
zerocopy.workspace = true
zip.workspace = true
caliptra-bitstream-downloader.workspace = true

[build-dependencies]
cc.workspace = true
