# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-core-util-host-command-types"
version.workspace = true
edition.workspace = true
description = "Shared command types and definitions for Caliptra Utility Host Library"

[dependencies]
caliptra-mcu-mbox-common.workspace = true
zerocopy.workspace = true