# Licensed under the Apache-2.0 license

[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-util-host-mailbox-test-config.workspace = true
caliptra-mailbox-server.workspace = true
caliptra-emu-types.workspace = true
caliptra-api-types.workspace = true
caliptra-image-types.workspace = true
caliptra-registers.workspace = true
chrono.workspace = true
clap.workspace = true
clap-num.workspace = true
crc.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
ecdsa.workspace = true
elf.workspace = true
emulator-bmc.workspace = true
emulator-caliptra.workspace = true
emulator-consts.workspace = true
emulator-mcu-mbox.workspace = true
emulator-periph.workspace = true
emulator-registers-generated.workspace = true
gdbstub_arch.workspace = true
gdbstub.workspace = true
hex.workspace = true
log.workspace = true
lazy_static.workspace = true
mcu-config.workspace = true
mcu-config-emulator.workspace = true
mcu-mbox-common.workspace = true

mcu-testing-common.workspace = true
otp-lifecycle.workspace = true
p384.workspace = true
pldm-common.workspace = true
pldm-fw-pkg.workspace = true
pldm-ua.workspace = true
rand.workspace = true
registers-generated.workspace = true
sec1.workspace = true
sha2.workspace = true
semver.workspace = true
simple_logger.workspace = true
smlang.workspace = true
strum_macros.workspace = true
strum.workspace = true
tempfile.workspace = true
tock-registers.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[dev-dependencies]
caliptra-test.workspace = true

[[bin]]
name = "emulator"
path = "src/main.rs"

[lib]
name = "emulator"
path = "src/lib.rs"

[features]
default = []
