# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mcu-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-mcu-core-util-host-mailbox-test-config.workspace = true
caliptra-mcu-core-mailbox-server.workspace = true
caliptra-emu-types.workspace = true
caliptra-api-types.workspace = true
caliptra-image-types.workspace = true
caliptra-registers.workspace = true
chrono.workspace = true
clap.workspace = true
clap-num.workspace = true
crc.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
ecdsa.workspace = true
elf.workspace = true
caliptra-mcu-emulator-bmc.workspace = true
caliptra-mcu-emulator-caliptra.workspace = true
caliptra-mcu-emulator-consts.workspace = true
caliptra-mcu-emulator-mcu-mbox.workspace = true
caliptra-mcu-emulator-periph.workspace = true
caliptra-mcu-emulator-registers-generated.workspace = true
gdbstub_arch.workspace = true
gdbstub.workspace = true
hex.workspace = true
log.workspace = true
lazy_static.workspace = true
caliptra-mcu-mbox-common.workspace = true
caliptra-mcu-testing-common.workspace = true
caliptra-mcu-otp-lifecycle.workspace = true
p384.workspace = true
caliptra-mcu-pldm-common.workspace = true
caliptra-mcu-pldm-fw-pkg.workspace = true
caliptra-mcu-pldm-ua.workspace = true
rand.workspace = true
caliptra-mcu-registers-generated.workspace = true
sec1.workspace = true
sha2.workspace = true
semver.workspace = true
simple_logger.workspace = true
smlang.workspace = true
strum_macros.workspace = true
strum.workspace = true
tempfile.workspace = true
tock-registers.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[dev-dependencies]
caliptra-test.workspace = true

[[bin]]
name = "caliptra-mcu-emulator"
path = "src/main.rs"

[lib]
name = "caliptra_mcu_emulator"
path = "src/lib.rs"

[features]
default = ["ocp-lock"]
ocp-lock = []
test-bare-metal = []
test-caliptra-certs = []
test-caliptra-crypto = []
test-caliptra-mailbox = []
test-caliptra-util-host-validator = []
test-get-device-state = []
test-dma = []
test-doe-transport-loopback = ["caliptra-mcu-emulator-periph/test-doe-transport-loopback"]
test-doe-discovery = ["caliptra-mcu-emulator-periph/test-doe-discovery"]
test-doe-spdm-responder-conformance = [
    "caliptra-mcu-emulator-periph/test-doe-spdm-responder-conformance",
]
test-doe-spdm-tdisp-ide-validator = [
    "caliptra-mcu-emulator-periph/test-doe-spdm-tdisp-ide-validator",
]
test-doe-user-loopback = ["caliptra-mcu-emulator-periph/test-doe-user-loopback"]
test-flash-based-boot = []
test-flash-ctrl-init = []
test-flash-ctrl-read-write-page = []
test-flash-ctrl-erase-page = []
test-flash-storage-read-write = []
test-flash-storage-erase = []
test-flash-usermode = []
test-firmware-update-flash = ["test-flash-based-boot"]
test-firmware-update-streaming = []
test-fpga-flash-ctrl = []
test-log-flash-linear = []
test-log-flash-circular = []
test-log-flash-usermode = []
test-mbox-sram = []
test-mci = []
test-mctp-ctrl-cmds = ["caliptra-mcu-emulator-periph/test-mctp-ctrl-cmds"]
test-mctp-user-loopback = ["caliptra-mcu-emulator-periph/test-mctp-user-loopback"]
test-mctp-spdm-responder-conformance = [
    "caliptra-mcu-emulator-periph/test-mctp-spdm-responder-conformance",
]
test-mctp-spdm-attestation = [
    "caliptra-mcu-emulator-periph/test-mctp-spdm-attestation",
]
test-mcu-mbox-driver = ["caliptra-mcu-emulator-periph/test-mcu-mbox-driver"]
test-mcu-mbox-soc-requester-loopback = []
test-mcu-mbox-usermode = []
test-mcu-mbox-cmds = []
test-mcu-mbox-fips-self-test = []
test-mcu-rom-flash-access = []
test-mcu-svn-gt-fuse = []
test-mcu-svn-lt-fuse = []
test-ocp-lock = []
test-exit-immediately = []
test-pldm-request-response = []
test-pldm-discovery = []
test-pldm-fw-update = []
test-pldm-fw-update-e2e = []
test-pldm-streaming-boot = []
test-warm-reset = []
